--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <!-- Hero Section -->
         <section class="hero">
-            <img src="c:\Users\vinaykumar\OneDrive\Desktop\PASSPORT VINAY - Copy.jpg" alt="Vinay Kumar Poralla" class="hero-image">
+            <img src="https://github.com/Vinay-2002-2214/portfolio/blob/main/PASSPORT%20VINAY%20-%20Copy.jpg" alt="Vinay Kumar Poralla" class="hero-image">
             <div class="hero-content">
                 <h1>Hello, I am <span>Vinay Kumar Poralla</span></h1>
                 <p>I create innovative solutions as a <span>Software Developer</span>. Let’s build something amazing together.</p>
@@ -130,4 +130,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
