--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <!-- Hero Section -->
         <section class="hero">
-            <img src="PASSPORT VINAY - Copy.jpg" alt="Vinay Kumar Poralla" class="hero-image">
+            <img src="profile.jpg" alt="Vinay Kumar Poralla" class="hero-image">
             <div class="hero-content">
                 <h1>Hello, I am <span>Vinay Kumar Poralla</span></h1>
                 <p>I create innovative solutions as a <span>Software Developer</span>. Let’s build something amazing together.</p>
@@ -130,6 +130,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
