--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <section id="contact" class="contact">
             <h2>Contact Me</h2>
             <p><strong>Email:</strong> vinaykumarporalla33@gmail.com | <strong>Phone:</strong> +91-9515095213</p>
-            <form>
+            <form action="https://formspree.io/f/your-form-id" method="POST" id="contactForm">
                 <div class="form-group">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" placeholder="Your Name" required>
@@ -119,6 +119,9 @@
                 </div>
                 <button type="submit" class="submit-button">Send Message</button>
             </form>
+            <div id="formSuccess" style="display:none; color: green; margin-top: 1em;">
+                Thank you for contacting me! I will get back to you soon.
+            </div>
         </section>
     </main>
 
@@ -128,9 +131,31 @@
     </footer>
 
     <script src="script.js"></script>
+    <script>
+        // Show a success message after submitting contact form
+        document.getElementById('contactForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            var form = e.target;
+            var data = new FormData(form);
+            fetch(form.action, {
+                method: 'POST',
+                body: data,
+                headers: {
+                    'Accept': 'application/json'
+                }
+            }).then(response => {
+                if (response.ok) {
+                    form.reset();
+                    document.getElementById('formSuccess').style.display = 'block';
+                } else {
+                    response.json().then(data => {
+                        alert(data.error || 'Oops! There was a problem submitting your form');
+                    });
+                }
+            }).catch(error => {
+                alert('Oops! There was a problem submitting your form');
+            });
+        });
+    </script>
 </body>
 </html>
-
-
-
-
