--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 </head>
 <body>
     <!-- Header Section -->
@@ -21,7 +22,7 @@
             </ul>
         </nav>
     </header>
-
+    
     <!-- Main Content -->
     <main>
         <!-- Hero Section -->
@@ -104,7 +105,7 @@
         <section id="contact" class="contact">
             <h2>Contact Me</h2>
             <p><strong>Email:</strong> vinaykumarporalla33@gmail.com | <strong>Phone:</strong> +91-9515095213</p>
-            <form action="https://formspree.io/f/your-form-id" method="POST" id="contactForm">
+            <form id="contactForm">
                 <div class="form-group">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" placeholder="Your Name" required>
@@ -131,31 +132,5 @@
     </footer>
 
     <script src="script.js"></script>
-    <script>
-        // Show a success message after submitting contact form
-        document.getElementById('contactForm').addEventListener('submit', function(e) {
-            e.preventDefault();
-            var form = e.target;
-            var data = new FormData(form);
-            fetch(form.action, {
-                method: 'POST',
-                body: data,
-                headers: {
-                    'Accept': 'application/json'
-                }
-            }).then(response => {
-                if (response.ok) {
-                    form.reset();
-                    document.getElementById('formSuccess').style.display = 'block';
-                } else {
-                    response.json().then(data => {
-                        alert(data.error || 'Oops! There was a problem submitting your form');
-                    });
-                }
-            }).catch(error => {
-                alert('Oops! There was a problem submitting your form');
-            });
-        });
-    </script>
 </body>
 </html>
