--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#education">Education</a></li>
+                <!-- Add Certifications to nav if you want -->
+                <li><a href="#certifications">Certifications</a></li>
             </ul>
         </nav>
     </header>
@@ -98,6 +100,30 @@
                         <li>Areas of Interest: Coding,Object Oriented Programming,DBMS,Web Development</li>
                     </ul>
                 </div>
+            </div>
+        </section>
+
+        <!-- Certifications Section (NEW FEATURE) -->
+        <section id="certifications" class="certifications">
+            <h2>Certifications</h2>
+            <button id="show-certificates-btn">Show Certificates</button>
+            <div id="certificates-list" style="display:none;">
+                <div class="certificate">
+                    <img src="oracle.jpg" alt="Certificate 1" style="width:100%;height:auto;">
+                    <p> Database Programming with SQL<br>Issued by:Oracle Academy<br>Date:27-09-2024</p>
+                </div>
+                <div class="certificate">
+                    <img src="YBI.jpg" alt="Certificate 2" style="width:100%;height:auto;">
+                    <p>Data science And Machine Learning Internship Completion<br>Issued by: YBI Foundation<br>Date:11-07-2024</p>
+                </div>
+                 <div class="certificate">
+                    <img src="Excler.jpg" alt="Certificate 3" style="width:100%;height:auto;">
+                    <p>Fullstack java Development Certification<br>Issued by: Excelr Organisation <br>Date:16-07-2025</p>
+            </div>
+            </div>
+                 <div class="certificate">
+                    <img src="springboard java.jpg" alt="Certificate 4" style="width:100%;height:auto;">
+                    <p>Learn Programming with java<br>Issued by: Infosys Sprintboard <br>Date:29-01-2025</p>
             </div>
         </section>
 
