--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                     <p><strong>Bachelor of Technology (B.Tech) in Computer Science and Engineering:</strong></p>
                     <p>Anurag Engineering College</p>
                     <p><strong>Graduation Year:</strong> 2025</p>
-                    <p><strong>GPA:</strong> 88.9</p>
+                    <p><strong>GPA:</strong> 8.89</p>
                     <p><strong>Board of Intermediate Education:</strong></p>
                     <p>Sri Vagdevi Junior College</p>
                     <p><strong>Year of Completion:</strong> 2021</p>
-                    <p><strong>Percentage:</strong> 94.6</p>
+                    <p><strong>Percentage:</strong> 94.6%</p>
                     <p><strong>Board of Secondary Education:</strong></p>
                     <p>Z.P.H.S Kodad</p>
                     <p><strong>Year of Completion:</strong> 2019</p>
@@ -160,3 +160,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
