Modify hero image and add certifications section
Updated hero section image and added new certifications.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <!-- Hero Section -->
         <section class="hero">
-            <img src="profile.jpg" alt="Vinay Kumar Poralla" class="hero-image">
+            <img src="1766498596910.jpg" alt="Vinay Kumar Poralla" class="hero-image">
             <div class="hero-content">
                 <h1>Hello, I am <span>Vinay Kumar Poralla</span></h1>
                 <p>I create innovative solutions as a <span>Software Developer</span>. Let’s build something amazing together.</p>
@@ -160,4 +160,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
